fix: use DB-stored prompt value instead of hardcoded message